feat: add read api for view (#2)
* v0.1.1

* 修复热量

* 更新依赖

* v0.2.0

* fix
